youfull/objects/X62_Genealogy__c.object
<CustomObject>
    <fields>
        <fullName>ACCT_NR__c</fullName>
        <externalId>true</externalId>
        <label>Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPGN_NR__c</fullName>
        <label>Campaign</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Key__c</fullName>
        <label>Contact Key</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Philippines Genealogy</relationshipLabel>
        <relationshipName>Philippines_Genealogy</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EXEC_GEN_CNT__c</fullName>
        <label>Count of Upline Executive Generations</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXEC_GEN_INDX__c</fullName>
        <label>Executive Generation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EXEC_RSNG_STR_IND__c</fullName>
        <label>Executive Rising Star Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Genealogy_Key__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>MRKT_CMPGN_ACCT_GEN_KEY</inlineHelpText>
        <label>Genealogy Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Leadership_Summary_Key__c</fullName>
        <label>Leadership Summary Key</label>
        <referenceTo>Leader_Downline_Summary__c</referenceTo>
        <relationshipLabel>Philippines Genealogy</relationshipLabel>
        <relationshipName>Philippines_Genealogy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_ID__c</fullName>
        <label>Market ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_Leadership_Summary_key__c</fullName>
        <label>NC_Leadership_SUmmary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_Personal_Performance_Key__c</fullName>
        <label>NC_Personal_Performance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Performance_Key__c</fullName>
        <label>Personal Performance Key</label>
        <referenceTo>My_Business__c</referenceTo>
        <relationshipLabel>Philippines Genealogy</relationshipLabel>
        <relationshipName>Philippines_Genealogy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSNG_STR_IND__c</fullName>
        <label>Rising Star Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Level_Number__c</fullName>
        <formula>VALUE(Personal_Performance_Key__r.LDRSHP_TITL_LVL_NR__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title Level Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPLN_ACCT_GEN_INDX__c</fullName>
        <label>UPLN_ACCT_GEN_INDX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPLN_ACCT_NR__c</fullName>
        <externalId>true</externalId>
        <label>Upline Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPLN_GEN_INDX_Formula__c</fullName>
        <formula>UPLN_GEN_INDX__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upline Generation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPLN_GEN_INDX__c</fullName>
        <label>Upline Generation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Philippines Genealogy</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Philippines Genealogy</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>